Bug 465354 - Sub-menus go under panel on Wayland
Summary: Sub-menus go under panel on Wayland
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Menu (Kicker) widget (other bugs)
Version First Reported In: 5.26.90
Platform: Other Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: wayland-only
: 470129 472331 475068 475193 476918 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-02-06 02:20 UTC by winblocker
Modified: 2023-11-29 17:00 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
Menu hidden behind the bar (69.13 KB, image/png)
2023-02-06 02:20 UTC, winblocker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description winblocker 2023-02-06 02:20:09 UTC
Created attachment 155989 [details]
Menu hidden behind the bar

SUMMARY

When i use the Application Menu (Kicker) on a bottom panel that is set to automatically hide, the sub menus expand to far down to be hidden behind the panel (see attachment).


STEPS TO REPRODUCE
1. Set up a panel with Kicker on it
2. Open a sub menu with sufficient entries in it.

OBSERVED RESULT
The new sub menu extends behind the panel, preventing access to the lower entries.

EXPECTED RESULT
The new sub menu should not extend below the panel thus preventing it to be hidden. This is the behavior when the auto hide function is off.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.26.90
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8
Kernel Version: 6.1.9-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 32 × AMD Ryzen 9 5950X 16-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: AMD Radeon RX 6900 XT
Manufacturer: ASUS
Comment 1 Nate Graham 2023-05-23 16:09:14 UTC
*** Bug 470129 has been marked as a duplicate of this bug. ***
Comment 2 Nate Graham 2023-10-11 19:32:49 UTC
*** Bug 475068 has been marked as a duplicate of this bug. ***
Comment 3 Nate Graham 2023-10-11 20:16:28 UTC
*** Bug 475193 has been marked as a duplicate of this bug. ***
Comment 4 daniel.savi 2023-11-06 18:46:02 UTC
Bug is fixed on my system. Debian 12.2, menu v 2.0
Comment 5 daniel.savi 2023-11-06 18:48:55 UTC
Sorry, bug is not fixed, I was on X11, not on waland.
Comment 6 daniel.savi 2023-11-06 18:49:26 UTC
(In reply to daniel.savi from comment #4)
> Bug is fixed on my system. Debian 12.2, menu v 2.0

Taht was wrong, was running X11
Comment 7 Nate Graham 2023-11-15 21:51:18 UTC
*** Bug 476918 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2023-11-15 22:36:22 UTC
*** Bug 472331 has been marked as a duplicate of this bug. ***
Comment 9 Bug Janitor Service 2023-11-22 11:59:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4691
Comment 10 Vlad Zahorodnii 2023-11-22 16:37:47 UTC
Git commit e52163d405b33a3e19e40aa9b32bdfef9d60b580 by Vlad Zahorodnii, on behalf of David Edmundson.
Committed on 22/11/2023 at 17:13.
Pushed by vladz into branch 'master'.

Drop DockLayer concept

With LayerShell all docks were in the above layer to match with the
semantics of the specification. Under X11 our main panel was also in the
above layer by setting the keep above flag.

The only thing that ended up in the dock layer were wayland applet
popups, and that was mostly by accident. When they get a transient
parent fixed they'll end up in the AboveLayer anyway so we should drop
it now to reduce complications.

This fixes a bug where applet popups could go under the panel.

M  +0    -1    src/effect/globals.h
M  +4    -0    src/wayland/plasmashell.h
M  +1    -9    src/window.cpp
M  +0    -1    src/window.h
M  +0    -19   src/xdgshellwindow.cpp
M  +0    -1    src/xdgshellwindow.h

https://invent.kde.org/plasma/kwin/-/commit/e52163d405b33a3e19e40aa9b32bdfef9d60b580